Agrego los iconos de URL de redes sociales y  pongo la clase corecta de columna *sm*

--- a/BlogMusica/index.html
+++ b/BlogMusica/index.html
@@ -21,7 +21,7 @@
 			margin-top: 2em; 
 		}
 		
-		@media (min-width: 700px){
+		@media (min-width: 750px){
 			.redes{
 				padding-top: 20%;
 				margin-bottom: 0; 
@@ -54,10 +54,10 @@
 			<div class="col-md-3 col-md-offset-5 ">
 					<div class=" redes">
 
-						<span class="col-md-3 col-ms-2 col-xs-2"><a href="#"><img class="img-responsive" src="imagenes/facebook.png"  ></a></span>
-						<span class="col-md-3 col-ms-2 col-xs-2"><a href="#"><img class="img-responsive" src="imagenes/instagram.png"  ></a></span>
-						<span class="col-md-3 col-ms-2 col-xs-2"><a href="#"><img class="img-responsive" src="imagenes/google.png" ></a></span>
-						<span class="col-md-3 col-ms-2 col-xs-2"><a href="#"><img class="img-responsive" src="imagenes/twitter.png" ></a></span>
+						<span class="col-md-3 col-sm-2 col-xs-2"><a href="https://www.facebook.com/gabrielpacheco13"><img class="img-responsive" src="imagenes/facebook.png"  ></a></span>
+						<span class="col-md-3 col-sm-2 col-xs-2"><a href="https://www.instagram.com/gp13_/"><img class="img-responsive" src="imagenes/instagram.png"  ></a></span>
+						<span class="col-md-3 col-sm-2 col-xs-2"><a href="https://plus.google.com/u/0/+GabrielPachecoM"><img class="img-responsive" src="imagenes/google.png" ></a></span>
+						<span class="col-md-3 col-sm-2 col-xs-2"><a href="https://twitter.com/gp13_"><img class="img-responsive" src="imagenes/twitter.png" ></a></span>
 
 					</div>
 			</div>
