inserto un row en el primer tex area comentario para mejor vista en movil

--- a/BlogMusica/index.html
+++ b/BlogMusica/index.html
@@ -88,11 +88,13 @@
 					<div class="col-md-4 ">
 						<img class="img-responsive img-center" src="imagenes/HeroesDelSilencio.jpg" alt="Heroes del silencio" width="100%">
 					</div>
+					<div class="row"> 
 					<div class="col-md-12">
 						<div class="input-group">
 							<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 							<textarea class="form-control" placeholder="Comentarios..."></textarea>
 						</div>
+					</div>	
 					</div>
 
 				</div>
