--- a/BlogMusica/index.html
+++ b/BlogMusica/index.html
@@ -45,6 +45,7 @@
 </head>
 <body>
 	<div class="container">
+		<header>
 		<div class="row">
 			<div class="col-md-4 ">
 				<a href="index.html">
@@ -62,6 +63,7 @@
 					</div>
 			</div>
 		</div>
+		</header>
 		<div class="row"> 
 		<nav  class="menu"> 
 			<ul class="nav nav-pills nav-justified">
@@ -78,7 +80,7 @@
 			<div class="col-md-8">
 				<div id ="post1" class="row">
 					<div  class="col-md-8 text-justify">
-						<h1>Heroes del Silencio </h1>
+						<h1>Heroes del Silencio <br/><small>La mejor banda del mundo.</small></h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi porro consequuntur, ducimus harum quod, quisquam distinctio. Repellendus consequatur esse distinctio, reprehenderit nesciunt laborum dolorem, quae quidem. Distinctio, error! Aperiam, minima lorem.</br>
 
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sed quas natus officiis doloremque commodi voluptatem cupiditate vel facere quia culpa aspernatur quibusdam molestiae assumenda, eaque aperiam! Minima, iste ipsam?
@@ -103,7 +105,7 @@
 						<img  class="img-responsive" src="imagenes/RadioHead.jpg" alt="Radio head"width="100%">
 					</div>
 					<div  class="col-md-8 text-justify">
-						<h1>Radio Head </h1>
+						<h1>RadioHead <br/> <small>has visto algo mejor?</small> </h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi porro consequuntur, ducimus harum quod, quisquam distinctio. Repellendus consequatur esse distinctio, reprehenderit nesciunt laborum dolorem, quae quidem. Distinctio, error! Aperiam, minima lorem.</br>
 
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sed quas natus officiis doloremque commodi voluptatem cupiditate vel facere quia culpa aspernatur quibusdam molestiae assumenda, eaque aperiam! Minima, iste ipsam?
