--- a/BlogMusica/index.html
+++ b/BlogMusica/index.html
@@ -39,6 +39,9 @@
 		.menu a:hover {
 			color: #c91b1e;
 		}
+		h2{
+			color: #4dac43;
+		}
 		
 	</style>
 	<title>Blog de Música - Gabriel Pacheco </title>
@@ -80,7 +83,7 @@
 			<div class="col-md-8">
 				<div id ="post1" class="row">
 					<div  class="col-md-8 text-justify">
-						<h1>Heroes del Silencio <br/><small>La mejor banda del mundo.</small></h1>
+						<h2>Heroes del Silencio <br/><small>La mejor banda del mundo.</small></h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi porro consequuntur, ducimus harum quod, quisquam distinctio. Repellendus consequatur esse distinctio, reprehenderit nesciunt laborum dolorem, quae quidem. Distinctio, error! Aperiam, minima lorem.</br>
 
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sed quas natus officiis doloremque commodi voluptatem cupiditate vel facere quia culpa aspernatur quibusdam molestiae assumenda, eaque aperiam! Minima, iste ipsam?
@@ -105,7 +108,7 @@
 						<img  class="img-responsive" src="imagenes/RadioHead.jpg" alt="Radio head"width="100%">
 					</div>
 					<div  class="col-md-8 text-justify">
-						<h1>RadioHead <br/> <small>has visto algo mejor?</small> </h1>
+						<h2>RadioHead <small>has visto algo mejor?</small> </h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi porro consequuntur, ducimus harum quod, quisquam distinctio. Repellendus consequatur esse distinctio, reprehenderit nesciunt laborum dolorem, quae quidem. Distinctio, error! Aperiam, minima lorem.</br>
 
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sed quas natus officiis doloremque commodi voluptatem cupiditate vel facere quia culpa aspernatur quibusdam molestiae assumenda, eaque aperiam! Minima, iste ipsam?
