--- a/BlogGastronomia/index.html
+++ b/BlogGastronomia/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="trasparencia"> 
+      <div class="trasparencia "> 
         <div class="row hide-for-small-only ">
-          <div class="column large-12 seccion">
+          <div class="column large-12 ">
             <div class="row">
               <div class="column small-4">
                   <h2 >Gabiel's Foods </h2>
