Optimizacio de imagenes (tiny) correción ortografica

--- a/BlogTurismo/index.html
+++ b/BlogTurismo/index.html
@@ -166,7 +166,7 @@
 	    						<h4>Perfil del Autor</h4>
 	    						<p>
 	    							
-	    							Gabriel Pacheco es un genio, el mas pintero y delicioso macho alfa de ecuador y de latino america Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis exercitationem placeat corporis necessitatibus repudiandae, 
+	    							Gabriel Pacheco es un genio, el mas pintero y delicioso macho alfa de Ecuador y de latino america Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis exercitationem placeat corporis necessitatibus repudiandae, 
 	    						</p>
 	    					</div>
 	 			
